--- a/templates/aboutme/index.html
+++ b/templates/aboutme/index.html
@@ -1,4 +1,13 @@
 <html>
-    <h1> Hello World!!</h1>
-    <p> This pages is loaded from Templates</p>
+
+    <head>
+        {% load static %}
+        <link rel="stylesheet" type="text/css" href="{% static 'aboutme/css/style.css' %}" />
+    </head>
+
+    <body>
+        <h1> Hello World!!</h1>
+        <p> This pages is loaded from Templates</p>
+    </body>
+
 </html>
