--- a/static/landing/css/style.css
+++ b/static/landing/css/style.css
@@ -1,9 +1,29 @@
-body {
-    background-color: powderblue;
+
+
+html, body {
+    height: 100%;
+    width: 100%;
 }
-h1 {
-    color: blue;
+
+.landing {
+    background: #111111;
+    display: table;
+    height: 100%;
+    min-height: 100;
+    width: 100%;
+    background-size: cover;
 }
-p {
-    color: red;
+
+.landing-text {
+    display: table-cell;
+    padding-left: 3%;
+
+    vertical-align: middle;
+    text-align: left;
+
+    color: #FFFFFF;
+    font-family: 'Exo', sans-serif;
+    font-weight: revert;
+    font-size: 600%;
+
 }
