--- a/static/landing/css/style.css
+++ b/static/landing/css/style.css
@@ -1,5 +1,3 @@
-
-
 html, body {
     height: 100%;
     width: 100%;
@@ -7,23 +5,41 @@ html, body {
 
 .landing {
     background: #111111;
-    display: table;
+    display: block;
     height: 100%;
     min-height: 100;
     width: 100%;
     background-size: cover;
 }
 
-.landing-text {
-    display: table-cell;
-    padding-left: 3%;
 
-    vertical-align: middle;
-    text-align: left;
+
+.title {
+    display: flex;
+    position: relative;
+    top: 45%;
+    transform: perspective(1px) translateY(-50%);
+    padding-left: 3%;
 
     color: #FFFFFF;
     font-family: 'Exo', sans-serif;
     font-weight: revert;
     font-size: 600%;
+
+
+}
+
+.subtitle {
+    display: block;
+    position: relative;
+    top: 34%;
+    transform: perspective(1px) translateY(-50%);
+    padding-left: 3.5%;
+
+    color: #FFFFFF;
+    font-family: 'Exo', sans-serif;
+    font-weight: lighter;
+    font-size: 187%;
+
 
 }
