--- a/templates/landing/index.html
+++ b/templates/landing/index.html
@@ -20,30 +20,15 @@
 </head>
 <body>
 
-{#<nav class="navbar navbar-expand-lg navbar-light">#}
-{#    <a class="navbar-brand" href="#">Navbar</a>#}
-{#    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"#}
-{#            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">#}
-{#        <span class="navbar-toggler-icon"></span>#}
-{#    </button>#}
-{##}
-{#    <div class="collapse navbar-collapse" id="navbarSupportedContent">#}
-{#        <ul class="navbar-nav mr-auto">#}
-{#            <li class="nav-item active">#}
-{#                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>#}
-{#            </li>#}
-{#            <li class="nav-item">#}
-{#                <a class="nav-link" href="#">Link</a>#}
-{#            </li>#}
-{#        </ul>#}
-{#    </div>#}
-{#</nav>#}
 
-
-<div class='landing'>
-    <h1 class="landing-text">Hello!<br> I'm <strong>Timam</strong></h1>
+<div class="landing">
+    <div class="title">
+        <p class="landing-text">I'm <strong>Timam</strong></p>
+    </div>
+    <div class="subtitle">
+        <p class="landing-text"> DevOps Engineer, Problem Solver</p>
+    </div>
 </div>
-
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
