--- a/templates/landing/index.html
+++ b/templates/landing/index.html
@@ -22,12 +22,33 @@
 
 
 <div class="landing">
-    <div class="title">
+    <div class="landing-hello">
+        <p class="landing-text">Hello!</p>
+    </div>
+    <div class="landing-title">
         <p class="landing-text">I'm <strong>Timam</strong></p>
     </div>
-    <div class="subtitle">
-        <p class="landing-text"> DevOps Engineer, Problem Solver</p>
+    <div class="landing-sub">
+        <p class="landing-text"> Site Reliability Engineer</p>
     </div>
+</div>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col col-lg-4 darker-left ">
+            <p class="darker-left-title"> INTRO</p>
+            <p class="darker-left-sub"> What I am all about. </p>
+        </div>
+        <div class="col col-lg-8 lighter-right">
+            <p class="lighter-right-sub">
+                Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero,
+                faucibus adipiscing, commodo quis, gravida id, est. Sed lectus. Praesent elementum hendrerit tortor. Sed semper lorem at felis.
+                Vestibulum volutpat, lacus a ultrices sagittis, mi neque euismod dui, eu pulvinar nunc sapien ornare nisl. Phasellus pede arcu,
+                dapibus eu, fermentum et, dapibus sed, urna. Fusce lacinia arcu et nulla. Nulla vitae mauris non felis mollis.
+            </p>
+        </div>
+    </div>
+
 </div>
 
 <!-- Optional JavaScript -->
