--- a/templates/landing/index.html
+++ b/templates/landing/index.html
@@ -49,6 +49,24 @@
         </div>
     </div>
 
+    <div class="row">
+        <div class="col col-lg-4 lighter-left ">
+            <p class="lighter-left-title"> EXPERTISE </p>
+            <p class="lighter-left-sub"> Batman would be jealous. </p>
+        </div>
+        <div class="col col-lg-8 darker-right">
+            <div class="row">
+                <div class="col col-lg-6">
+                    1
+                </div>
+                <div class="col col-lg-6">
+                    2
+                </div>
+            </div>
+        </div>
+
+    </div>
+
 </div>
 
 <!-- Optional JavaScript -->
