--- a/static/landing/css/style.css
+++ b/static/landing/css/style.css
@@ -52,9 +52,7 @@ html, body {
 .darker-left {
     overflow: hidden;
     background: #121212;
-    padding-top: 100px;
-    padding-right: 100px;
-    padding-bottom: 100px;
+    padding: 5% 5% 5% 5%;
     color: #f8f8f8;
 }
 
@@ -73,9 +71,7 @@ html, body {
 .lighter-right {
     overflow: hidden;
     background: #181818;
-    padding-top: 100px;
-    padding-left: 100px;
-    padding-bottom: 100px;
+    padding : 5% 5% 5% 5%;
     color: #f4f4f4;
 }
 
